feat: Cyclomatic Complexity制限(max=4)を導入し、コード複雑度を改善
- Checkstyleに循環的複雑度チェックを追加（最大値4）
- Value Objectsの複雑なコンストラクタを小さなヘルパーメソッドに分解
  - DeclinedEvent, SelectedEvent: validation処理を独立メソッドに
  - ConfirmedEvent: スペース番号検証を独立メソッドに
- Mapperクラスの複雑度を削減
  - AlbumMapper: Optional chainingとヘルパーメソッドで複雑度を低減
  - ArticleMapper: 変換処理をヘルパーメソッドに抽出
- EventMatchingServiceの複雑な条件判定を小さなメソッドに分解
- java.util.OptionalのFQCNをインポートに変更して可読性向上
- Apache Commonsの使用をユーティリティ処理のみに限定（validation処理は独自実装を維持）

すべてのメソッドがCyclomatic Complexity <= 4を満たし、
ビルドおよびテストが正常に通過することを確認。